Restructured the project, added session management.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,26 @@
-<doctype! HTML5>
-<head>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="style.css") }}">
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}Donativa - Home{% endblock %}
+
+{% block css %}
+{% endblock %}
+
+{% block javascript %}
+{% endblock %}
+
+{% block body %}
+  <div class="jumbotron">
 	<h1>Hey {{name}}! How are you?</h1>
-</body>
+
+    <p>This example is a quick exercise to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
+    <p>To see the difference between static and fixed top navbars, just scroll.</p>
+    <p>
+      <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
+    </p>
+  </div>
+{% endblock %}
+
+
+
+
+  
+
