--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,7 @@
-<doctype! HTML5>
+<doctype! html>
+
+<html>
+
 <head>
 	<title>{% block title %}Donativa{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="bootstrap.css") }}">
@@ -6,58 +9,60 @@
 	{% block css %}
 	{% endblock %}
 </head>
+
 <body>
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Donativa</a>
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Donativa</a>
+      </div>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li class="dropdown-header">Nav header</li>
+              <li><a href="#">Separated link</a></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if session.logged_in_user %}
+      	<li><a href="/profile/{{session.logged_in_user}}">{{session.logged_in_user}}</a></li>
+      	<li><a href="/logout">Logout</a></li>
+          {% else %}
+          <li><a href="/signup">Sign-up</a></li>
+          <li><a href="/login">Already registered? Log-in!</a></li>
+          {% endif %}
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header">Nav header</li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        {% if session.logged_in_user %}
-    	<li><a href="/profile/{{session.logged_in_user}}">{{session.logged_in_user}}</a></li>
-    	<li><a href="/logout">Logout</a></li>
-        {% else %}
-        <li><a href="/signup">Sign-up</a></li>
-        <li><a href="/login">Already registered? Log-in!</a></li>
-        {% endif %}
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</nav>
+  </nav>
 
-<div class="container">
+  <div class="container">
+    {% block body %}
+    {% endblock %}
+  </div> <!-- /container -->
 
-{% block body %}
-{% endblock %}
-
-</div> <!-- /container -->
-<script src="{{ url_for('static', filename="jquery.min.js") }}"></script>
-<script src="{{ url_for('static', filename="bootstrap.js") }}"></script>
-{% block javascript %}
-{% endblock %}
+  <script src="{{ url_for('static', filename="jquery.min.js") }}"></script>
+  <script src="{{ url_for('static', filename="bootstrap.js") }}"></script>
+  {% block javascript %}
+  {% endblock %}
 </body>
+
+</html>
