--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
 
 <head>
 	<title>{% block title %}Donativa{% endblock %}</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="bootstrap.css") }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="style.css") }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/bootstrap.css") }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/style.css") }}">
 	{% block css %}
 	{% endblock %}
 </head>
@@ -59,8 +59,8 @@
     {% endblock %}
   </div> <!-- /container -->
 
-  <script src="{{ url_for('static', filename="jquery.min.js") }}"></script>
-  <script src="{{ url_for('static', filename="bootstrap.js") }}"></script>
+  <script src="{{ url_for('static', filename="js/jquery.min.js") }}"></script>
+  <script src="{{ url_for('static', filename="js/bootstrap.js") }}"></script>
   {% block javascript %}
   {% endblock %}
 </body>
