--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Donativa - Home{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="index.css") }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/index.css") }}">
 {% endblock %}
 
 {% block javascript %}
