--- a/templates/login.html
+++ b/templates/login.html
@@ -1,22 +1,18 @@
 <!DOCTYPE HTML>
 <head>
     <title>Saykouk Wonderland</title>
-    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='bootstrap.css')}} />
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} />
     <!--Import Google Icon Font-->
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href={{url_for('static', filename='materialize.css')}}  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href={{url_for('static', filename='login.min.css')}} />
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/materialize.css')}}  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/login.min.css')}} />
       
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 
 <body>
-    
-    <style type=text/css>
-    background-image: url("static/images/back.png");
-    </style>
     <div  class="container">
     <h1 class="welcome" autofocus="welcome"><center>Welcome to<br>Donativa</center></h1>
         <div class="card card-container">
@@ -39,6 +35,6 @@
         </div><!-- /card-container -->
     </div><!-- /container -->
     
-    <script type="text/javascript" src="{{url_for('static', filename='jquery.min.js')}}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='materialize.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/materialize.js')}}"></script>
 </body>
