Used the Bootstrap grid system to split signup into two.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,18 +5,19 @@
 {% endblock %}
 {% block body %}
 <h1>Sign-up for Donativa ...</h1>
-<section class="container">
-  <div class="left-half">
+<div class="row vdivide">
+  <div class="col-md-6 left-part">
     <article>
       <h1>.. as a Donator</h1>
-      <p>Weekends don't count unless you spend them doing something completely pointless.</p>
+      <p>As a registered donor, you will have access to a catalogue of certified associations to whom you can donate your used clothes, books and other possessions.</p>
     </article>
   </div>
-  <div class="right-half">
+  <div class="divider"></div>
+  <div class="col-md-6 right-part">
     <article>
       <h1>.. as an Association.</h1>
-      <p>If your knees aren't green by the end of the day, you ought to seriously re-examine your life.</p>
+      <p>You will be able to browse through the various donations posted by other donators and submit a request to the donator when once you find one that suits your needs.</p>
     </article>
   </div>
-</section>
+</div>
 {% endblock %}
