--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,28 +1,12 @@
-body{
-  padding-top: 51px;
-}
-
-h1{
-  padding-bottom: 50px;
-}
-.container {
-  display: table;
-  height: 100%;
-  width: 100%;
-}
-
-div {
-  display: table-cell;
-  text-align: center;
-  vertical-align:;
-  
-  
-}
-
-.left-half {
-  background: rgba(224, 224, 224, 0.77);
-}
-
-.right-half {
-  background: rgba(224, 224, 224, 0.77);
+.row.vdivide [class*='col-']:not(:last-child):after {
+  background: #000000;
+  width: 1px;
+  content: "";
+  display:block;
+  position: absolute;
+  top:30px;
+  bottom: 0;
+  right: 0;
+  height: 500px;
+  margin-right: 20px;
 }
