Added new pictures to signup. Still needs work.

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,14 +8,14 @@
 <div class="row vdivide">
   <div class="col-md-6 left-part">
     <article>
-      <h1>.. as a Donator</h1>
-      <p>As a registered donor, you will have access to a catalogue of certified associations to whom you can donate your used clothes, books and other possessions.</p>
-    </article>
-  </div>
-  <div class="divider"></div>
+      <h2>.. as a Donator.</h2>
+      <img src="../static/images/donator-signup.jpg" style="margin-left: -40px; padding-top: 20px; padding-bottom: 20px;">
+      <h5>As a registered donor, you will have access to a catalogue of certified associations to whom you can donate your used clothes, books and other possessions.</h5>
+    </artimargin<left -80div padding-top: 50px; class="divider"></div>
   <div class="col-md-6 right-part">
     <article>
-      <h1>.. as an Association.</h1>
+      <h2>.. as an Association.</h2>
+      <img src="../static/images/101.jpg" style="padding-top: 20px; padding-bottom: 20px;">
       <p>You will be able to browse through the various donations posted by other donators and submit a request to the donator when once you find one that suits your needs.</p>
     </article>
   </div>
