--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,13 +1,23 @@
-.row.vdivide [class*='col-']:not(:last-child):after {
-  background: #000000;
-  width: 1px;
-  content: "";
-  display:block;
-  position: absolute;
-  top:30px;
-  bottom: 0;
-  right: 0;
-  height: 500px;
-  margin-right: 20px;
+.left-part{
+  border-right: 1px solid #ccc;
+  border-right-style: "padding-top: 50px";
+  margin-left: -30px;
 }
 
+.right-part{
+  margin-left: 30px;
+}
+
+
+.title{
+  padding-bottom: 30px;
+}
+
+p{
+  text-indent: 50px;
+
+}
+
+.btn-special{
+	width:450px
+	}
