Set up signup for both Organizations and Donors. Moved classes related to forms to a file named form.py (Further uses of theses classes should be done by first referencing to the file i.e form.name_of_class)

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -8,14 +8,14 @@
 <div class="row">
   <div class="col-md-6 left-part" >
     <article>
-      <button type="button" class="btn btn-primary btn-lg btn-block" style="width: 450px">...as a Donor.</button>
+      <a type="button" href="/signup/donor_signup" class="btn btn-primary btn-lg btn-block" style="width: 450px">...as a Donor.</a>
       <img src="../static/images/donator-signup.jpg" style="margin-left: -40px; padding-top: 20px; padding-bottom: 20px;">
       <p style="margin-left:-48px; margin-right:30px">As a registered donor, you will have access to a catalogue of certified associations to whom you can donate your used clothes, books and other possessions.</p>
       </article>
   </div>
   <div class="col-md-6 right-part">
     <article>
-      <button type="button" class="btn btn-primary btn-lg btn-block btn-special" style="margin-left: 50px; width: 450px;">...as an Organization.</button>
+      <a type="button" href="/signup/organization_signup" class="btn btn-primary btn-lg btn-block btn-special" style="margin-left: 50px; width: 450px;">...as an Organization.</a>
       <img src="../static/images/101.jpg" style="padding-top: 20px; padding-bottom: 20px;">
       <p>You will be able to browse through the various donations posted by other donators and submit a request to the donator when once you find one that suits your needs.</p>
     </article>
