Added cards for index page.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -15,3 +15,12 @@
     position: absolute;
     z-index: -1;   
 }
+
+.card {
+    border: 1px solid #DDD;
+    box-shadow: 2px 2px 9px rgba(0, 0, 0, 0.1);
+}
+
+.donation-card{
+     margin-top:20px;
+}
