--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 {% block title %}Donativa - Home{% endblock %}
 
 {% block css %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/materialize.css") }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/index.css") }}">
 {% endblock %}
 
 {% block javascript %}
+<script src="{{ url_for('static', filename="js/materialize.min.js") }}"></script>
 {% endblock %}
 
 {% block body %}
@@ -17,6 +19,43 @@
       <a class="btn btn-lg btn-primary" href="/signup" role="button">Join the movement!</a>
     </p>
   </div>
+
+  <!-- Page Layout here -->
+ {% for element in triplets %}
+<div class="row">
+  <div class="col s0 m0 l2">&nbsp</div>
+    <!-- Cards container -->
+    <div class="col s12 m12 l8">
+      <div class="row">
+      <!-- Col: Card 1 -->
+      {% for item in element %}
+      <div class="col-md-4">
+        <!-- Card 1 -->
+        <div class="card">
+          <div class="card-content white-text">
+            <span class="card-title grey-text text-darken-4">Used Sweater and pair of Sneakers</span>
+            <div class="card__meta">
+              <a href="#"><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
+              <time>17th March </time>
+            </div>
+       		<img src="http://www.petsonbroadway.com/wp-content/uploads/2015/07/cat-supplies-portland-09-300x300.jpg" class="thumbnail donation-card">
+
+            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
+          </div>
+          <div class="card-action">
+            <a href="#">More details</a>
+            <a href="#" class="card-action-right">Some other link</a>
+          </div>
+        </div>
+        <!-- End of card -->
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endfor %}
+
 {% endblock %}
 
 
