--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
       <a class="btn btn-lg btn-primary" href="/signup" role="button">Join the movement!</a>
     </p>
   </div>
-
+  <h2>Latest Donations: </h2>
   <!-- Page Layout here -->
  {% for element in triplets %}
 <div class="row">
@@ -33,14 +33,13 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-content white-text">
-            <span class="card-title grey-text text-darken-4">Used Sweater and pair of Sneakers</span>
+       		<img src="http://www.petsonbroadway.com/wp-content/uploads/2015/07/cat-supplies-portland-09-300x300.jpg" class="thumbnail donation-card">
+       		<span class="card-title grey-text text-darken-4">Used Sweater and pair of Sneakers</span>
             <div class="card__meta">
-              <a href="#"><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
+              <a href="#" ><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
               <time>17th March </time>
             </div>
-       		<img src="http://www.petsonbroadway.com/wp-content/uploads/2015/07/cat-supplies-portland-09-300x300.jpg" class="thumbnail donation-card">
-
-            <p class="card-subtitle grey-text text-darken-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p class="card-subtitle grey-text text-darken-2 paragraph-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <span class="blue-text text-darken-2 card-info"><i class="small material-icons">label</i>&nbsp;lindy hop, balboa, charleston</span>
           </div>
           <div class="card-action">
