Added page for detailed items' info. Added comments in items' info. Still need to add box to write comments.

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,9 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-content white-text">
+          <a href="/donation_page">
        		<img src="http://www.petsonbroadway.com/wp-content/uploads/2015/07/cat-supplies-portland-09-300x300.jpg" class="thumbnail donation-card">
+          </a>
        		<span class="card-title grey-text text-darken-4">Used Sweater and pair of Sneakers</span>
             <div class="card__meta">
               <a href="#" ><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
