--- a/templates/donation_page.html
+++ b/templates/donation_page.html
@@ -61,11 +61,12 @@
 
 	</div>
 	<div class="col-md-4">
-		<button type="button" class="btn btn-primary btn-lg btn-block btn-request">Request Donation</button><br>
-
-		<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-user"></span> <h4 style="display:inline;">Ayoub Kachkach</h4></a><br><br>
-		<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-home"></span> <h4 style="display:inline;">Mohammedia</h4></a><br><br>
-		 <span class="glyphicon glyphicon-time time-icon"></span> <h4 class="time-text">12/06/2017 10:15</h4><br>
+		<div class="details-text">
+			<button type="button" class="btn btn-primary btn-lg btn-block btn-request">Request Donation</button><br>
+			<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-user"></span> <h5 style="display:inline;">Ayoub Kachkach</h5></a><br><br>
+			<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-home"></span> <h5 style="display:inline;">Mohammedia</h5></a><br><br>
+			 <span class="glyphicon glyphicon-time time-icon"></span> <h5 class="time-text">12/06/2017 10:15</h5><br>
+		</div>
 		
 	</div>
 </div>
