--- a/templates/donation_page.html
+++ b/templates/donation_page.html
@@ -33,7 +33,7 @@
 							<i class="fa fa-heart"></i>
 						</div>
 						<div class="comment-content">
-							Nice sweater! I am interested in getting it. Not for myself of course, I was thinking of my beloved cats. My house tends to get cold at night and they need something to keep their frail bodies warm.
+							Nice sweater! I am interested in getting it for my beloved cats. My house tends to get cold at night and they need something to keep their frail bodies warm.
 						</div>
 					</div>
 				</div>
