Added profile.html (Not done yet)

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
           </a>
        		<span class="card-title grey-text text-darken-4">Used Sweater and pair of Sneakers</span>
             <div class="card__meta">
-              <a href="#" ><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
+              <a href={{url_for('profile',username='theayoubkach')}} ><span class="glyphicon glyphicon-user"></span> Ayoub Kachkach</a>
               <time>17th March </time>
             </div>
             <p class="card-subtitle grey-text text-darken-2 paragraph-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
