--- a/templates/login.html
+++ b/templates/login.html
@@ -2,6 +2,7 @@
 <head>
     <title>Saykouk Wonderland</title>
     <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} />
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/NewLogin.css')}} />
     <!--Import Google Icon Font-->
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -15,6 +16,7 @@
 <body>
     <div  class="container">
     <h1 class="welcome" autofocus="welcome"><center>Welcome to<br>Donativa</center></h1>
+    <!-- <img src="http://i.imgur.com/RcmcLv4.png" class="img-responsive" alt="" />  -->
         <div class="card card-container">
         <h2 class='login_title'><center>Login</center></h2>
         <hr>
