--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,20 @@
 	<title>{% block title %}Donativa{% endblock %}</title>
   {% block css %}
   {% endblock %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/bootstrap.css") }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/style.css") }}">
- 
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/bootstrapN.css") }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/styleN.css") }}">
+  
+
+
+
+
+   <!-- Bootstrap core CSS -->
+    <link href="static/css/bootstrap.css" rel="stylesheet">
+    <!--external css-->
+    <link href="static/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="static/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -45,11 +56,90 @@
         <ul class="nav navbar-nav navbar-right">
           {% if session.logged_in_user %}
       	<li><a href="/profile/{{session.logged_in_user}}">{{session.logged_in_user}}</a></li>
-      	<li><a href="/logout">Logout</a></li>
+          <!--***********************************NOTIFICATION*********************************************************-->
+                <ul class="nav navbar-nav">
+                                <div class="nav notify-row" id="top_menu">
+                <!--  notification start -->
+                <ul class="nav top-menu">
+
+                    <!-- inbox dropdown start-->
+                    <li id="header_inbox_bar" class="dropdown">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
+                            <i class="fa fa-envelope-o"></i>
+                            <span class="badge bg-theme">5</span>
+                        </a>
+                        <ul class="dropdown-menu extended inbox">
+                            <div class="notify-arrow notify-arrow-green"></div>
+                            <li>
+                                <p class="green">You have 5 new messages</p>
+                            </li>
+                            <li>
+                                <a href="index.html#">
+                                    <span class="photo"><img alt="avatar" src="static/images/ui-zac.jpg"></span>
+                                    <span class="subject">
+                                    <span class="from">Zac Snider</span>
+                                    <span class="time">Just now</span>
+                                    </span>
+                                    <span class="message">
+                                        Hi mate, how is everything?
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#">
+                                    <span class="photo"><img alt="avatar" src="static/images/ui-divya.jpg"></span>
+                                    <span class="subject">
+                                    <span class="from">Divya Manian</span>
+                                    <span class="time">40 mins.</span>
+                                    </span>
+                                    <span class="message">
+                                     Hi, I need your help with this.
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#">
+                                    <span class="photo"><img alt="avatar" src="static/images/ui-danro.jpg"></span>
+                                    <span class="subject">
+                                    <span class="from">Dan Rogers</span>
+                                    <span class="time">2 hrs.</span>
+                                    </span>
+                                    <span class="message">
+                                        Love your new Dashboard.
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#">
+                                    <span class="photo"><img alt="avatar" src="static/images/ui-sherman.jpg"></span>
+                                    <span class="subject">
+                                    <span class="from">Dj Sherman</span>
+                                    <span class="time">4 hrs.</span>
+                                    </span>
+                                    <span class="message">
+                                        Please, answer asap.
+                                    </span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#">See all messages</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <!-- inbox dropdown end -->
+                </ul>
+                <!--  notification end -->
+            </div>
+                        </ul>
+                    </li>
+                    <!-- inbox dropdown end -->
+        <!--********************************END_NOTIFICATION*******************************************************-->
+        <li><a href="/logout">Logout</a></li>
           {% else %}
           <li><a href="/signup">Sign-up</a></li>
           <li><a href="/login">Already registered? Log-in!</a></li>
           {% endif %}
+
         </ul>
       </div><!--/.nav-collapse -->
     </div>
@@ -61,6 +151,16 @@
   </div> <!-- /container -->
   <script src="{{ url_for('static', filename="js/jquery.min.js") }}"></script>
   <script src="{{ url_for('static', filename="js/bootstrap.js") }}"></script>
+
+      <!-- js placed at the end of the document so the pages load faster and notifications!-->
+    <script src="static/js/jquery.js"></script>
+    <script src="static/js/jquery-1.8.3.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script class="include" type="text/javascript" src="static/js/jquery.dcjqaccordion.2.7.js"></script>
+    <script src="static/js/jquery.scrollTo.min.js"></script>
+    <script src="static/js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="static/js/jquery.sparkline.js"></script>
+    
   {% block javascript %}
   {% endblock %}
 </body>
