--- a/templates/base.html
+++ b/templates/base.html
@@ -6,19 +6,11 @@
 	<title>{% block title %}Donativa{% endblock %}</title>
   {% block css %}
   {% endblock %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/bootstrapN.css") }}">
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/styleN.css") }}">
-  
-
-
-
 
    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.css" rel="stylesheet">
-    <!--external css-->
-    <link href="static/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="static/css/style.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} />
+    <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/style.css')}} />
+
 
 </head>
 
