--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {%block css%}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/profile.css") }}">
-{%enblock%}
+	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename="css/profile.css")}}">
+{%endblock%}
 
 {%block body%}
-{%enblock%}
+
+{%endblock%}
