--- a/templates/donor_signup.html
+++ b/templates/donor_signup.html
@@ -6,7 +6,10 @@
 {% from "includes/_formhelpers.html" import render_field %}
 <form method="POST" action="">
   <div class="form-group">
-    {{render_field(form.name, class_="form-control")}}
+    {{render_field(form.first_name, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.last_name, class_="form-control")}}
   </div>
   <div class="form-group">
     {{render_field(form.email, class_="form-control")}}
@@ -24,7 +27,13 @@
     {{render_field(form.address, class_="form-control")}}
   </div>
   <div class="form-group">
+    {{render_field(form.city, class_="form-control")}}
+  </div>
+  <div class="form-group">
     {{render_field(form.phone_number, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.bio, class_="form-control")}}
   </div>
   <p><input type="submit" class="btn btn-primary" value="Submit"></p>
 </form>
