Added further styling to the right column in profile.html

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -2,12 +2,12 @@
 	background-color: #337ab7;
 	display: inline;
 	margin-left: 30px;
-	
-
+	padding: 4px 4px 4px 4px;
 }
 
 
 .username{
 	margin-left: 30px;
+	padding-bottom: 10px;
 }
 
