--- a/templates/base.html
+++ b/templates/base.html
@@ -67,55 +67,56 @@
                                 <p class="green">You have 5 new messages</p>
                             </li>
                             <li>
-                                <a href="index.html#">
+                                <a class href="/donations_history/{{session.logged_in_user}}">
                                     <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-zac.jpg")}}></span>
                                     <span class="subject">
                                     <span class="from">Zac Snider</span>
                                     <span class="time">Just now</span>
                                     </span>
                                     <span class="message">
-                                        Hi mate, how is everything?
+                                        Name of donation
                                     </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html#">
+                                <a class href="/donations_history/{{session.logged_in_user}}">
                                     <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-divya.jpg")}}></span>
                                     <span class="subject">
                                     <span class="from">Divya Manian</span>
                                     <span class="time">40 mins.</span>
                                     </span>
                                     <span class="message">
-                                     Hi, I need your help with this.
+                                    Name of donation
                                     </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html#">
+                                <a class href="/donations_history/{{session.logged_in_user}}">
                                     <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-danro.jpg")}}></span>
                                     <span class="subject">
                                     <span class="from">Dan Rogers</span>
                                     <span class="time">2 hrs.</span>
                                     </span>
                                     <span class="message">
-                                        Love your new Dashboard.
+                                        Name of donation
                                     </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html#">
+                                <a class href="/donations_history/{{session.logged_in_user}}">
                                     <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-sherman.jpg")}}></span>
                                     <span class="subject">
                                     <span class="from">Dj Sherman</span>
                                     <span class="time">4 hrs.</span>
                                     </span>
                                     <span class="message">
-                                        Please, answer asap.
+                                        Name of donation
                                     </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="index.html#">See all messages</a>
+                  
+                                <a class href="/donations_history/{{session.logged_in_user}}" style="color:#337ab7;"><b>See all requests</b></style></a>
                             </li>
                         </ul>
                     </li>
