Completed design for profile.html

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -11,3 +11,17 @@
 	padding-bottom: 10px;
 }
 
+.card {
+    border: 1px solid #DDD;
+    box-shadow: 2px 2px 9px rgba(0, 0, 0, 0.1);
+
+}
+
+.outside-card{
+	width: 800px;
+}
+.thumbnail{
+	width:  250px;
+	height: 250px;
+}
+
