--- a/templates/donationshistory.html
+++ b/templates/donationshistory.html
@@ -1,185 +1,25 @@
-<doctype! html>
-<html>
-<head>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename="css/donationshistory.css") }}">
-</head>
-<body>
-		<div class="container">
-			<div class="row">
+{%extends "base.html"%}
+{%block css%}
+{%endblock%}
 
-				<section class="content">
-					<h1>Table Filter</h1>
-					<div class="col-md-8 col-md-offset-2">
-						<div class="panel panel-default">
-							<div class="panel-body">
-								<div class="pull-right">
-									<div class="btn-group">
-										<button type="button" class="btn btn-success btn-filter" data-target="pagado">Pagado</button>
-										<button type="button" class="btn btn-warning btn-filter" data-target="pendiente">Pendiente</button>
-										<button type="button" class="btn btn-danger btn-filter" data-target="cancelado">Cancelado</button>
-										<button type="button" class="btn btn-default btn-filter" data-target="all">Todos</button>
-									</div>
-								</div>
-								<div class="table-container">
-									<table class="table table-filter">
-										<tbody>
-											<tr data-status="pagado">
-												<td>
-													<div class="ckbox">
-														<input type="checkbox" id="checkbox1">
-														<label for="checkbox1"></label>
-													</div>
-												</td>
-												<td>
-													<a href="javascript:;" class="star">
-														<i class="glyphicon glyphicon-star"></i>
-													</a>
-												</td>
-												<td>
-													<div class="media">
-														<a href="#" class="pull-left">
-															<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-														</a>
-														<div class="media-body">
-															<span class="media-meta pull-right">Febrero 13, 2016</span>
-															<h4 class="title">
-																Lorem Impsum
-																<span class="pull-right pagado">(Pagado)</span>
-															</h4>
-															<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-														</div>
-													</div>
-												</td>
-											</tr>
-											<tr data-status="pendiente">
-												<td>
-													<div class="ckbox">
-														<input type="checkbox" id="checkbox3">
-														<label for="checkbox3"></label>
-													</div>
-												</td>
-												<td>
-													<a href="javascript:;" class="star">
-														<i class="glyphicon glyphicon-star"></i>
-													</a>
-												</td>
-												<td>
-													<div class="media">
-														<a href="#" class="pull-left">
-															<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-														</a>
-														<div class="media-body">
-															<span class="media-meta pull-right">Febrero 13, 2016</span>
-															<h4 class="title">
-																Lorem Impsum
-																<span class="pull-right pendiente">(Pendiente)</span>
-															</h4>
-															<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-														</div>
-													</div>
-												</td>
-											</tr>
-											<tr data-status="cancelado">
-												<td>
-													<div class="ckbox">
-														<input type="checkbox" id="checkbox2">
-														<label for="checkbox2"></label>
-													</div>
-												</td>
-												<td>
-													<a href="javascript:;" class="star">
-														<i class="glyphicon glyphicon-star"></i>
-													</a>
-												</td>
-												<td>
-													<div class="media">
-														<a href="#" class="pull-left">
-															<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-														</a>
-														<div class="media-body">
-															<span class="media-meta pull-right">Febrero 13, 2016</span>
-															<h4 class="title">
-																Lorem Impsum
-																<span class="pull-right cancelado">(Cancelado)</span>
-															</h4>
-															<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-														</div>
-													</div>
-												</td>
-											</tr>
-											<tr data-status="pagado" class="selected">
-												<td>
-													<div class="ckbox">
-														<input type="checkbox" id="checkbox4" checked>
-														<label for="checkbox4"></label>
-													</div>
-												</td>
-												<td>
-													<a href="javascript:;" class="star star-checked">
-														<i class="glyphicon glyphicon-star"></i>
-													</a>
-												</td>
-												<td>
-													<div class="media">
-														<a href="#" class="pull-left">
-															<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-														</a>
-														<div class="media-body">
-															<span class="media-meta pull-right">Febrero 13, 2016</span>
-															<h4 class="title">
-																Lorem Impsum
-																<span class="pull-right pagado">(Pagado)</span>
-															</h4>
-															<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-														</div>
-													</div>
-												</td>
-											</tr>
-											<tr data-status="pendiente">
-												<td>
-													<div class="ckbox">
-														<input type="checkbox" id="checkbox5">
-														<label for="checkbox5"></label>
-													</div>
-												</td>
-												<td>
-													<a href="javascript:;" class="star">
-														<i class="glyphicon glyphicon-star"></i>
-													</a>
-												</td>
-												<td>
-													<div class="media">
-														<a href="#" class="pull-left">
-															<img src="https://s3.amazonaws.com/uifaces/faces/twitter/fffabs/128.jpg" class="media-photo">
-														</a>
-														<div class="media-body">
-															<span class="media-meta pull-right">Febrero 13, 2016</span>
-															<h4 class="title">
-																Lorem Impsum
-																<span class="pull-right pendiente">(Pendiente)</span>
-															</h4>
-															<p class="summary">Ut enim ad minim veniam, quis nostrud exercitation...</p>
-														</div>
-													</div>
-												</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
-							</div>
-						</div>
-						<div class="content-footer">
-							<p>
-								Page © - 2016 <br>
-								Powered By <a href="https://www.facebook.com/tavo.qiqe.lucero" target="_blank">TavoQiqe</a>
-							</p>
-						</div>
-					</div>
-				</section>
-				
+{% block body %}	
+	<div class="col-md-12">
+
+		<div class="row" >
+			<div class="col-md-1 thumbnail" style="border: 1px solid #DDD">
+			<img src="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/12208710_880517135351049_2664080044137643377_n.jpg?oh=1f045b744226807b68290d8affa4fea1&oe=59C9D4B2">
+			</div>
+			<div class="col-md-7">
+			<h4>Used sweater and pair of sneakers.</h4>
+			<h5 style="color: grey;">Manal Hamdi</h5>
+			</div>
+			<div class="col-md-4">
+				<br/><br/><button type="button" class="btn btn-success">Accept</button>
+				<button type="button" class="btn btn-danger">Reject</button>
+
 			</div>
 		</div>
-		<script src="{{ url_for('static', filename="js/donationshistory.js") }}"></script>
-		
-</body>
-</html>
+		<hr>
+
+	</div>
+{% endblock %}
