--- a/templates/organization_signup.html
+++ b/templates/organization_signup.html
@@ -20,6 +20,21 @@
   <div class="form-group">
     {{render_field(form.confirm, class_="form-control")}}
   </div>
+  <div class="form-group">
+    {{render_field(form.address, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.city, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.phone_number, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.certification_code, class_="form-control")}}
+  </div>
+  <div class="form-group">
+    {{render_field(form.bio, class_="form-control")}}
+  </div>
   <p><input type="submit" class="btn btn-primary" value="Submit"></p>
 </form>
 {% endblock %}
