Front end of the whole sign up with error is working

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,10 @@ Premium: http://www.gridgum.com
 
 /* BASIC THEME CONFIGURATION */
 
-
+.success-popup  {
+    transition: .3s ease all;
+    font-family: 'Roboto', sans-serif;
+}
 
 /*sidebar navigation*/
 
