--- a/templates/donor_signup.html
+++ b/templates/donor_signup.html
@@ -14,6 +14,9 @@
   <div class="form-group">
     {{render_field(form.email, class_="form-control")}}
   </div>
+  {% if error %}
+                <div class="alert alert-danger" style="padding: 8px 8px 8px 8px">{{error}}</div>
+  {% endif %}
   <div class="form-group">
     {{render_field(form.username, class_="form-control")}}
   </div>
