--- a/templates/organization_signup.html
+++ b/templates/organization_signup.html
@@ -1,6 +1,4 @@
 {% extends 'base.html' %}
-
-
 {% block body %}
 <h1>Sign-up for Donativa</h1>
 {% from "includes/_formhelpers.html" import render_field %}
@@ -11,9 +9,13 @@
   <div class="form-group">
     {{render_field(form.email, class_="form-control")}}
   </div>
+    {% if error %}
+                <div class="alert alert-danger" style="padding: 8px 8px 8px 8px">{{error}}</div>
+    {% endif %}
   <div class="form-group">
     {{render_field(form.username, class_="form-control")}}
   </div>
+
   <div class="form-group">
     {{render_field(form.password, class_="form-control")}}
   </div>
