Finished designing the donation adding page. Needs to implement the SQL procedure for taking info from form and inserting it into the table.

--- a/templates/donation_add.html
+++ b/templates/donation_add.html
@@ -23,7 +23,7 @@
                 <div class="alert alert-danger" style="padding: 8px 8px 8px 8px">{{error}}</div>
   {% endif %}
   <div>
-    {{ form.date(class="dtpick") }}
+    {{ form.donation_date(class="dtpick") }}
     <button type="submit">Go</button>
   </div>
   <p><input type="submit" class="btn btn-primary" value="Submit"></p>
