--- a/templates/donation_add.html
+++ b/templates/donation_add.html
@@ -8,10 +8,8 @@
 <h1 class="title">Add Donation for Donativa</h1>
 {% from "includes/_formhelpers.html" import render_field %}
 <form method="POST" action="">
-  <form method=post enctype=multipart/form-data>
-    <p><input type=file name=file>
-        <input type=submit value=Upload>
-  </form>
+  
+    <p><input type=file name=file></p>
   <div class="form-group">
     {{render_field(form.title, class_="form-control")}}
   </div>
@@ -33,8 +31,8 @@
   <strong><p style='font-size=22px;'>Offer's Expiration Date</p></strong>
   <div>
     {{ form.donation_date(class="dtpick") }}
-    
   </div>
+
   <p><input type="submit" class="btn btn-primary submit-btn" value="Submit"></p>
 </form>
 {% endblock %}
