--- a/templates/donationshistory.html
+++ b/templates/donationshistory.html
@@ -4,14 +4,14 @@
 
 {% block body %}	
 	<div class="col-md-12">
-
+	{% for j in requests_display %}
 		<div class="row" >
 			<div class="col-md-1 thumbnail" style="border: 1px solid #DDD">
 			<img src="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/12208710_880517135351049_2664080044137643377_n.jpg?oh=1f045b744226807b68290d8affa4fea1&oe=59C9D4B2">
 			</div>
 			<div class="col-md-7">
-			<h4>Used sweater and pair of sneakers.</h4>
-			<h5 style="color: grey;">Manal Hamdi</h5>
+			<h4>{% print(j[2]) %}</h4>
+			<h5 style="color: grey;">{% print(j[0]) %}</h5>
 			</div>
 			<div class="col-md-4">
 				<br/><br/><button type="button" class="btn btn-success">Accept</button>
@@ -20,6 +20,6 @@
 			</div>
 		</div>
 		<hr>
-
+	{% endfor %}
 	</div>
 {% endblock %}
