notifications number design fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
                         <ul class="dropdown-menu extended inbox">
                             <div class="notify-arrow notify-arrow-green"></div>
                             <li>
-                                <p class="green">You have 5 new messages</p>
+                                <p class="green">You have {% print n_requests %} new messages</p>
                             </li>
                             <li>
                                 <a class href="/donations_history/{{session.logged_in_user}}">
